-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.14.2
-
None
-
-
ca85e1246eacfe7ba570882a674e313be3b808f8 (qt/qtbase/5.14)
Launch examples\widgets\mainwindows\mdi\debug\mdi.exe, observe assert
Program: c:\dev\5-vs17-514\qt-514\qtbase\bin\Qt5Cored.dll Module: 5.14.1 File: src/corelib/text/qstring.h Line: 1029 ASSERT: "uint(i) < uint(size())" in file c:\dev\5-vs17-514\qt-514\qtbase\include\qtcore\../../src/corelib/text/qstring.h, line 1029
- is duplicated by
-
QTBUG-81640 [REG 5.15] Crash during construction of QLocale() on Windows
-
- Closed
-
| For Gerrit Dashboard: QTBUG-81530 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 287198,6 | updateSystemPrivate(): fix handling of empty string as non-null QVariant | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |
| 287621,4 | Fall back to "+" if MS returns empty string for positive sign | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |